add su to webdriver manager installer circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
       - run:
           name: Run webmanager
           command: |
-              npm install -g webdriver-manager
+              sudo npm install -g webdriver-manager
               sudo webdriver-manager update
               sudo webdriver-manager start
       - run:
