--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,8 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - ./node_modules
       - restore_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
@@ -135,6 +137,7 @@ jobs:
       - run:
           name: Run build
           command: npm run build.dev
+          background: true
           no_output_timeout: 20m
       - run:
           name: Run webmanager
