--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ defaults: &job-defaults
     - image: circleci/node:8.10
       environment:
         - TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+    - image: selenium/standalone-chrome:3.1.0
 
 version: 2
 jobs:
@@ -141,13 +142,6 @@ jobs:
           command: npm run start
           background: true
           no_output_timeout: 20m
-      - run:
-          name: Download Selenium
-          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
       - run:
           name: Run webmanager
           command: |
