--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,9 @@ defaults: &job-defaults
     - image: circleci/node:8.10
       environment:
         - TZ: "/usr/share/zoneinfo/America/Los_Angeles"
-    - image: selenium/standalone-chrome:3.1.0
+    - image: circleci/node:8-browsers
+      environment:
+          CHROME_BIN: "/usr/bin/google-chrome"
 
 version: 2
 jobs:
@@ -131,7 +133,7 @@ jobs:
           key: dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Run install
-          command: npm install --only=dev
+          command: npm install --dev
           no_output_timeout: 20m
       - save_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
@@ -142,6 +144,12 @@ jobs:
           command: npm run build.dev
           background: true
           no_output_timeout: 20m
+      - run:
+          name: Run webmanager
+          command: |
+              sudo npm install -g webdriver-manager
+              sudo webdriver-manager update
+              sudo webdriver-manager start
       - run:
           name: Run e2e
           command: xvfb-run -a npm run e2e.dev -- --no-progress --config=protractor-ci.conf.js
