--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,7 @@ jobs:
           key: dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Run install
-          command: npm install --dev
+          command: npm install
           no_output_timeout: 20m
       - save_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
@@ -147,14 +147,10 @@ jobs:
           command: |
             curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
       - run:
-          name: Start Selenium
-          command: |
-            java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
-      - run:
           name: Run webmanager
           command: |
             sudo webdriver-manager start
+          background: true
       - run:
           name: Run e2e
           command: xvfb-run -a npm run e2e -- --no-progress --config=protractor-ci.conf.js
