--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,8 +135,6 @@ jobs:
           no_output_timeout: 20m
       - save_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - ./node_modules
       - run:
           name: Run build
           command: npm run start
@@ -147,13 +145,17 @@ jobs:
           command: |
             curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
       - run:
-          name: Run webmanager
+          name: Start Selenium
           command: |
-            sudo webdriver-manager start
+            java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
           background: true
       - run:
+          name: Run webdriver
+          command: |
+            webdriver-manager start
+      - run:
           name: Run e2e
-          command: xvfb-run -a npm run e2e -- --no-progress --config=protractor-ci.conf.js
+          command: npm run e2e
           no_output_timeout: 20m
   merge_development:
     <<: *job-defaults
