--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,9 @@ jobs:
           command: npm install
           no_output_timeout: 20m
       - save_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - run:
           name: Run build
           command: npm run start
