--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,25 +139,18 @@ jobs:
             - node_modules
       - run:
           name: Run build
-          command: npm run start
+          command: npm run start.dev
           background: true
           no_output_timeout: 20m
       - run:
-          name: Download Selenium
-          command: |
-            curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: |
-            java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
-      - run:
           name: Run webdriver
           command: |
+            npm install -g protractor
+            npm install -g selenium-webdriver
             webdriver-manager start
       - run:
           name: Run e2e
-          command: npm run e2e
+          command: npm run e2e.dev
           no_output_timeout: 20m
   merge_development:
     <<: *job-defaults
