--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,6 @@ jobs:
       - run:
           name: npm install
           command: npm install
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
@@ -32,10 +25,6 @@ jobs:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
           paths:
             - libs/deployment_scripts
-      - save_cache:
-          key: google-chrome-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - /opt/google/chrome
   build:
     <<: *job-defaults
     steps:
@@ -126,8 +115,13 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
-      - restore_cache:
-          key: google-chrome-{{ .Branch }}-{{ .Revision }}
+      - run:
+          name: Install Chrome
+          command: |
+            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+            sudo apt-get update
+            sudo apt-get -y install google-chrome-stable
       - run:
           name: Update webdriver
           command: npm run pree2e
@@ -400,7 +394,7 @@ workflows:
             - deploy_s3
       - e2e_register:
           requires:
-            - install
+            - deploy_cloudfront
           filters:
             branches:
               only:
