--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/deployment_scripts"]
 	path = libs/deployment_scripts
-	url = git@bitbucket.org:sixcrm/cloudfronts3deployment.git
+	url = git@github.com:6CRM/CloudFrontS3Deployment.git
