--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,8 +86,14 @@ jobs:
       - restore_cache:
           key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - run:
+          name: debugging
+          command: printenv
+      - run:
           name: Set Credentials
           command: cat deployment_credentials/stscredentials >> $BASH_ENV
+      - run:
+          name: Debugging 2
+          command: printenv
       - run:
           name: Deploy App to s3
           command: node libs/deployment_scripts/src/deploy-s3.js deployment/deploy-config.json
