--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,7 +137,7 @@ jobs:
             background: true
         -run:
             name: Wait for server to start
-            run: sleep 60
+            command: sleep 60
         - run:
             name: Run smoke e2e
             command: npm run e2e.local -- --suite login
