--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@angular/platform-browser": "6.0.5",
     "@angular/platform-browser-dynamic": "6.0.5",
     "@angular/router": "6.0.5",
+    "@auth0/angular-jwt": "^2.0.0",
     "angular2-highcharts": "0.5.5",
-    "angular2-jwt": "^0.1.28",
     "angular2-markdown": "^2.2.3",
     "angular2-text-mask": "^8.0.1",
     "angulartics2": "1.5.2",
-    "auth0-lock": "^11.0.0",
+    "auth0-lock": "^11.7.2",
     "codemirror": "^5.26.0",
     "core-js": "^2.4.0",
     "enhanced-resolve": "3.3.0",
