--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,17 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run: git submodule update --init --remote --merge
       - run:
           name: npm install
           command: npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
       - save_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
           paths:
             - libs/deployment_scripts
   build:
@@ -30,9 +30,9 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - restore_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Set version
           command: node libs/deployment_scripts/src/versioning.js
@@ -41,7 +41,7 @@ jobs:
           command: ./libs/deployment_scripts/src/build-angular.sh
           no_output_timeout: 20m
       - save_cache:
-          key: dist-{{ .Branch }}-{{ .Revision }}
+          key: v1-dist-{{ .Branch }}-{{ .Revision }}
           paths:
             - dist
   aws_sts:
@@ -49,14 +49,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - restore_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
       - run:
           name: debugging
           command: printenv
       - restore_cache:
-          key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
+          key: v1-deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Make Access Credentials directory
           command: mkdir -p deployment_credentials/
@@ -64,7 +64,7 @@ jobs:
           name: Create Credentials
           command: node ./libs/deployment_scripts/src/sts-assume-role.js $CIRCLE_BRANCH >> deployment_credentials/stscredentials
       - save_cache:
-          key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
+          key: v1-deployment-credentials-{{ .Branch }}-{{ .Revision }}
           paths:
             - deployment_credentials
       - run:
@@ -78,13 +78,13 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - restore_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: dist-{{ .Branch }}-{{ .Revision }}
+          key: v1-dist-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
+          key: v1-deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - run:
           name: debugging
           command: printenv
@@ -102,13 +102,13 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - restore_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
+          key: v1-deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
-          key: dist-{{ .Branch }}-{{ .Revision }}
+          key: v1-dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Set Credentials
           command: cat deployment_credentials/stscredentials >> $BASH_ENV
@@ -120,7 +120,7 @@ jobs:
       steps:
         - checkout
         - restore_cache:
-            key: dependency-cache-{{ checksum "package-lock.json" }}
+            key: v1-dependency-cache-{{ checksum "package-lock.json" }}
         - run:
             name: Install Chrome
             command: |
@@ -147,7 +147,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -172,7 +172,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -197,7 +197,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -222,7 +222,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -247,7 +247,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -272,7 +272,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -297,7 +297,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -322,7 +322,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -347,7 +347,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Chrome
           command: |
@@ -372,7 +372,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run: git submodule update --init --remote --merge
       - run:
           name: Promote changes
@@ -382,7 +382,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
       - run: git submodule update --init --remote --merge
       - run:
           name: Promote changes
