--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,9 +127,17 @@ jobs:
             name: Wait for server to start
             command: sleep 60
         - run:
-            name: Run smoke e2e
-            command: npm run e2e.local
-            no_output_timeout: 20m
+            name: Run local login e2e
+            command: npm run e2e.local -- --suite login&
+            background: true
+        - run:
+            name: Run local register e2e
+            command: npm run e2e.local -- --suite register&
+            background: true
+        - run:
+            name: Run local navigation e2e
+            command: npm run e2e.local -- --suite navigation&
+            background: true
   e2e_register:
     <<: *job-defaults
     steps:
