--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "less-loader": "^4.0.5",
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.1.2",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "istanbul-instrumenter-loader": "^3.0.0",
