--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,7 @@ jobs:
             background: true
         - run:
             name: Wait for tests to finish
-            command: sleep 120
+            command: while pgrep node;do sleep 5s;done
   e2e_register:
     <<: *job-defaults
     steps:
