--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -355,6 +355,31 @@ jobs:
               npm run e2e.stage -- --suite merchant_provider_group
             fi
           no_output_timeout: 20m
+  e2e_create_order:
+    <<: *job-defaults
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Chrome
+          command: |
+            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+            sudo apt-get update
+            sudo apt-get -y install google-chrome-stable
+      - run:
+          name: Update webdriver
+          command: npm run pree2e
+      - run:
+          name: Run e2e create order
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "development" ]; then
+              npm run e2e.dev -- --suite create_order
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+              npm run e2e.stage -- --suite create_order
+            fi
+          no_output_timeout: 20m
 
 workflows:
   version: 2
@@ -463,6 +488,14 @@ workflows:
                 - development
                 - staging
       - e2e_merchant_provider_group:
+          requires:
+            - deploy_cloudfront
+          filters:
+            branches:
+              only:
+                - development
+                - staging
+      - e2e_create_order:
           requires:
             - deploy_cloudfront
           filters:
