--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
       - run:
           name: Add/Update CloudFront Distribution
           command: node libs/deployment_scripts/src/deploy-cloudfront.js deployment/deploy-config.json
-  e2e_local:
+  e2e_local_smoke:
       <<: *job-defaults
       steps:
         - checkout
@@ -127,10 +127,10 @@ jobs:
             name: Wait for server to start
             command: sleep 60
         - run:
-            name: Run local e2e
-            command: npm run e2e.local
+            name: Run local smoke e2e
+            command: npm run e2e.local -- --suite smoke
             no_output_timeout: 20m
-  e2e_register:
+  e2e_auth:
     <<: *job-defaults
     steps:
       - checkout
@@ -147,15 +147,15 @@ jobs:
           name: Update webdriver
           command: npm run pree2e
       - run:
-          name: Run e2e register
+          name: Run e2e auth
           command: |
             if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite register
+              npm run e2e.dev -- --suite auth
             elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite register
+              npm run e2e.stage -- --suite auth
             fi
           no_output_timeout: 20m
-  e2e_accept_invite:
+  e2e_crm:
     <<: *job-defaults
     steps:
       - checkout
@@ -172,15 +172,15 @@ jobs:
           name: Update webdriver
           command: npm run pree2e
       - run:
-          name: Run e2e accept invite
+          name: Run e2e crm
           command: |
             if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite invite
+              npm run e2e.dev -- --suite crm
             elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite invite
+              npm run e2e.stage -- --suite crm
             fi
           no_output_timeout: 20m
-  e2e_login:
+  e2e_app:
     <<: *job-defaults
     steps:
       - checkout
@@ -197,187 +197,12 @@ jobs:
           name: Update webdriver
           command: npm run pree2e
       - run:
-          name: Run e2e login
+          name: Run e2e app
           command: |
             if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite login
+              npm run e2e.dev -- --suite app
             elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite login
-            fi
-          no_output_timeout: 20m
-  e2e_navigation:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e navigation
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite navigation
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite navigation
-            fi
-          no_output_timeout: 20m
-  e2e_campaign:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e campaign
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite campaign
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite campaign
-            fi
-          no_output_timeout: 20m
-  e2e_product:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e product
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite product
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite product
-            fi
-          no_output_timeout: 20m
-  e2e_product_schedule:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e product schedule
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite product_schedule
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite product_schedule
-            fi
-          no_output_timeout: 20m
-  e2e_merchant_provider:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e merchant provider
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite merchant_provider
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite merchant_provider
-            fi
-          no_output_timeout: 20m
-  e2e_merchant_provider_group:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e merchant provider group
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite merchant_provider_group
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite merchant_provider_group
-            fi
-          no_output_timeout: 20m
-  e2e_create_order:
-    <<: *job-defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Chrome
-          command: |
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-            sudo apt-get update
-            sudo apt-get -y install google-chrome-stable
-      - run:
-          name: Update webdriver
-          command: npm run pree2e
-      - run:
-          name: Run e2e create order
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "development" ]; then
-              npm run e2e.dev -- --suite create_order
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run e2e.stage -- --suite create_order
+              npm run e2e.stage -- --suite app
             fi
           no_output_timeout: 20m
 
@@ -413,7 +238,7 @@ workflows:
       - deploy_cloudfront:
           requires:
             - deploy_s3
-      - e2e_local:
+      - e2e_local_smoke:
           requires:
             - install
           filters:
@@ -431,7 +256,7 @@ workflows:
               only:
                 - development
                 - staging
-      - e2e_accept_invite:
+      - e2e_auth:
           requires:
             - deploy_cloudfront
           filters:
@@ -439,63 +264,7 @@ workflows:
               only:
                 - development
                 - staging
-      - e2e_login:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_navigation:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_campaign:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_product:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_product_schedule:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_merchant_provider:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_merchant_provider_group:
-          requires:
-            - deploy_cloudfront
-          filters:
-            branches:
-              only:
-                - development
-                - staging
-      - e2e_create_order:
+      - e2e_app:
           requires:
             - deploy_cloudfront
           filters:
