Upload e2e report on staging

--- a/deployment/deploy-config.json
+++ b/deployment/deploy-config.json
@@ -4,5 +4,10 @@
     "names": {
       "priority": "admin.recursix.com"
     }
+  },
+  "report": {
+    "name": "admin-sixcrm.com-staging-e2e-report",
+    "srcPath": "e2e-html-report",
+    "clean": true
   }
 }
