--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,53 @@ jobs:
               npm run e2e.stage -- --suite app
             fi
           no_output_timeout: 20m
+  e2e_all:
+    <<: *job-defaults
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Chrome
+          command: |
+            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+            sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+            sudo apt-get update
+            sudo apt-get -y install google-chrome-stable
+      - run:
+          name: Update webdriver
+          command: npm run pree2e
+      - run:
+          name: Run e2e all
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "development" ]; then
+              npm run e2e.dev
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+              npm run e2e.stage
+            fi
+          no_output_timeout: 20m
+      - save_cache:
+          key: v1-e2e-html-report-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - e2e-html-report
+  deploy_report_s3:
+    <<: *job-defaults
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependency-cache-{{ checksum "package-lock.json" }}
+      - restore_cache:
+          key: v1-git-modules-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: v1-e2e-html-report-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: v1-deployment-credentials-{{ .Branch }}-{{ .Revision }}
+      - run:
+          name: Set Credentials
+          command: cat deployment_credentials/stscredentials >> $BASH_ENV
+      - run:
+          name: Deploy Report to s3
+          command: node libs/deployment_scripts/src/deploy-report.js deployment/deploy-config.json
 
 workflows:
   version: 2
@@ -255,7 +302,6 @@ workflows:
             branches:
               only:
                 - development
-                - staging
       - e2e_app:
           requires:
             - deploy_cloudfront
@@ -263,7 +309,6 @@ workflows:
             branches:
               only:
                 - development
-                - staging
       - e2e_crm:
           requires:
             - deploy_cloudfront
@@ -271,4 +316,17 @@ workflows:
             branches:
               only:
                 - development
+      - e2e_all:
+          requires:
+            - deploy_cloudfront
+          filters:
+            branches:
+              only:
+                - staging
+      - deploy_report_s3:
+          requires:
+            - e2e_all
+          filters:
+            branches:
+              only:
                 - staging
