Run test in sequence instead of in parallel

--- a/deployment/deploy-config.json
+++ b/deployment/deploy-config.json
@@ -6,7 +6,10 @@
     }
   },
   "report": {
-    "name": "admin-sixcrm.com-staging-e2e-report",
+    "names": {
+     "development": "admin-sixcrm.com-development-e2e-report",
+     "staging": "admin-sixcrm.com-staging-e2e-report"
+    },
     "srcPath": "e2e-html-report",
     "clean": true
   }
