--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "enhanced-resolve": "3.3.0",
     "file-saver": "^1.3.3",
     "google-material-color": "^1.3.1",
+    "grapesjs": "^0.14.27",
     "hammerjs": "^2.0.8",
     "html2canvas": "0.5.0-alpha1",
     "js-beautify": "^1.6.14",
@@ -69,7 +70,6 @@
     "rxjs-compat": "^6.2.0",
     "sha1": "^1.1.1",
     "text-mask-addons": "^3.5.1",
-    "tinymce": "^4.6.4",
     "uuid": "^3.0.1",
     "zone.js": "~0.8.26"
   },
@@ -88,7 +88,6 @@
     "@types/node": "~6.0.60",
     "@types/numeral": "0.0.20",
     "@types/prismjs": "^1.4.18",
-    "@types/tinymce": "^4.5.6",
     "autoprefixer": "^7.2.3",
     "awesome-typescript-loader": "2.2.4",
     "aws-sdk": "^2.97.0",
