--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "js-beautify": "^1.6.14",
     "jsonwebtoken": "^8.2.1",
     "jspdf": "^1.4.1",
+    "juice": "^4.3.2",
     "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
